Fix cut text on mobile

--- a/src/style/layout/_grid.sass
+++ b/src/style/layout/_grid.sass
@@ -7,7 +7,8 @@
         padding: 0
     max-width: $container-column-threshold
     &:last-child
-        margin-bottom: $block-space
+        /* add nav bar margin to fix cut in Firefox/Chrome mobile */
+        margin-bottom: calc(#{$block-space} + #{$nav-bar-height})
 
 .row::before,
 .row::after
